--- a/WSFile/pom.xml
+++ b/WSFile/pom.xml
@@ -9,12 +9,13 @@
   <url>http://maven.apache.org</url>
   
   <repositories>
-	 <repository>
-      <id>maven2-repository.dev.java.net</id>
+   <repository>
+      <id>maven2-repository.java.net</id>
       <name>Java.net Repository for Maven</name>
-      <url>http</url>
+      <url>http://download.java.net/maven/2/</url>
+      <layout>default</layout>
     </repository>
-</repositories>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,19 +23,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-	<!-- Rest Jersey part -->
-	<dependency>
-    <groupId>org.glassfish.jersey.containers</groupId>
-    <artifactId>jersey-container-servlet</artifactId>
-    <version>2.15</version>
+    <!-- Rest Jersey part -->
+    <dependency>
+      <groupId>org.glassfish.jersey.containers</groupId>
+      <artifactId>jersey-container-servlet</artifactId>
+      <version>2.15</version>
     </dependency>
     <dependency>
-    <groupId>org.glassfish.jersey.core</groupId>
-    <artifactId>jersey-client</artifactId>
-    <version>2.15</version>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>2.15</version>
     </dependency>
-	<!---Jetty part-->
-  <dependency>
+    <!---Jetty part-->
+    <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
       <version>9.2.7.v20150116</version>
@@ -46,38 +47,51 @@
       <version>9.2.7.v20150116</version>
       <scope>provided</scope>
     </dependency>
-	<!--Other part-->
-	<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>servlet-api</artifactId>
-    <version>2.5</version>
-	<scope>provided</scope>
+    <!--Google part-->
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-drive</artifactId>
+      <version>v2-rev65-1.13.2-beta</version>
     </dependency>
-	<dependency>
-    <groupId>javax.servlet.jsp</groupId>
-    <artifactId>jsp-api</artifactId>
-    <version>2.1</version>
-	<scope>provided</scope>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-oauth2</artifactId>
+      <version>v2-rev84-1.19.1</version>
     </dependency>
- </dependencies>
+
+
+    <!--Other part-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.1</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
   <build>
     <finalName>WSFile</finalName>
-	<plugins>
-	       <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<inherited>true</inherited>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-	    </plugin>
-		<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-        <version>9.2.7.v20150116</version>
-			</plugin>
-	</plugins>
-  </build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <inherited>true</inherited>
+        <configuration>
+         <source>1.7</source>
+         <target>1.7</target>
+       </configuration>
+     </plugin>
+     <plugin>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-maven-plugin</artifactId>
+      <version>9.2.7.v20150116</version>
+    </plugin>
+  </plugins>
+</build>
 </project>
