--- a/WSFile/src/main/webapp/WEB-INF/web.xml
+++ b/WSFile/src/main/webapp/WEB-INF/web.xml
@@ -17,4 +17,12 @@
    <servlet-name>jersey-servlet</servlet-name>
   <url-pattern>/restfile/*</url-pattern>
 </servlet-mapping>
+<servlet>
+    <servlet-name>AuthServlet</servlet-name>
+    <servlet-class>net.ws.service.AuthServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AuthServlet</servlet-name>
+    <url-pattern>/auth</url-pattern>
+  </servlet-mapping>
 </web-app>
