--- a/WSFile/src/main/webapp/WEB-INF/web.xml
+++ b/WSFile/src/main/webapp/WEB-INF/web.xml
@@ -5,24 +5,32 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   <servlet>
-     <servlet-name>jersey-servlet</servlet-name>
-    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-      <init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>net.ws.restfile</param-value>
-        </init-param>
-   <load-on-startup>1</load-on-startup>
- </servlet>
- <servlet-mapping>
    <servlet-name>jersey-servlet</servlet-name>
-  <url-pattern>/servlet/*</url-pattern>
+   <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+   <init-param>
+    <param-name>jersey.config.server.provider.packages</param-name>
+    <param-value>net.ws.restfile</param-value>
+  </init-param>
+  <load-on-startup>1</load-on-startup>
+</servlet>
+<servlet-mapping>
+ <servlet-name>jersey-servlet</servlet-name>
+ <url-pattern>/servlet/*</url-pattern>
 </servlet-mapping>
 <servlet>
-    <servlet-name>AuthServlet</servlet-name>
-    <servlet-class>net.ws.service.AuthServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AuthServlet</servlet-name>
-    <url-pattern>/auth</url-pattern>
-  </servlet-mapping>
+  <servlet-name>AuthServlet</servlet-name>
+  <servlet-class>net.ws.service.AuthServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+  <servlet-name>AuthServlet</servlet-name>
+  <url-pattern>/auth/*</url-pattern>
+</servlet-mapping>
+<servlet>
+  <servlet-name>FileServlet</servlet-name>
+  <servlet-class>net.ws.service.FileServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+  <servlet-name>FileServlet</servlet-name>
+  <url-pattern>/file</url-pattern>
+</servlet-mapping>
 </web-app>
