--- a/WSFile/pom.xml
+++ b/WSFile/pom.xml
@@ -76,7 +76,7 @@
   <dependency>
     <groupId>com.google.api-client</groupId>
     <artifactId>google-api-client-appengine</artifactId>
-    <version>1.7.0-beta</version>
+    <version>1.18.0-rc</version>
   </dependency>
   <!--Other part-->
   <dependency>
