--- a/WSFile/pom.xml
+++ b/WSFile/pom.xml
@@ -78,6 +78,12 @@
     <artifactId>google-api-client-appengine</artifactId>
     <version>1.18.0-rc</version>
   </dependency>
+  <!--JSon part-->
+  <dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1.1</version>
+  </dependency>
   <!--Other part-->
   <dependency>
     <groupId>javax.servlet</groupId>
